--- a/index.html
+++ b/index.html
@@ -4,67 +4,54 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- PAGE settings -->
-  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Landing</title>
-  <meta name="description" content="Wireframe design of a landing page by Pingendo">
-  <meta name="keywords" content="Pingendo bootstrap example template wireframe landing">
-  <meta name="author" content="Pingendo">
-  <!-- CSS dependencies -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="wireframe.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
-  <div class="h-50 d-flex align-items-center bg-info">
-    <div class="container">
-      <div class="row"><img src="assets/header.svg" class="w-100 container position-absolute pt-0"></div>
+<body style="	background-image: linear-gradient(to bottom, hex(#333333), hex(2FFD31));	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="bg-dark">
+  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="	background-image: linear-gradient(to bottom, rgba(51,51,51,1), rgba(0,0,0,0.8));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+    <div class="container py-5">
       <div class="row">
-        <div class="mx-auto text-center col-md-6">
-          <h1 class="display-1 text-white">Webpasture Studios</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 bg-dark
-text-center align-content center">
-          <h6 class="">
-            <a href="tel:07415459896">Phone: +44(0)7415459896</a><br>
-            <a href="mailto:webpasturestudios@gmail.com">Email: webpasturestudios@gmail.com</a> </h6>
-        </div><a href="mailto:webpasturestudios@gmail.com">
-        </a>
-      </div><a href="mailto:webpasturestudios@gmail.com">
-      </a>
-    </div><a href="mailto:webpasturestudios@gmail.com">
-    </a>
-  </div><a href="mailto:webpasturestudios@gmail.com">
-    <div class="py-5" id="B">
-      <div class="container">
-        <div class="row">
-          <div class="p-4 col-lg-4 col-md-6">
-            <h4><b>8 Years Experiance Of Creating Bespoke Websites, Apps And Scripts</b></h4>
-          </div>
-          <div class="p-4 col-lg-4 col-md-6">
-            <h4><b>Our Skills</b></h4>
-            <ul class="">
-              <li>Ruby</li>
-              <li>Python</li>
-              <li>C#<br></li>
-              <li>VB.net<br></li>
-              <li>Java<br></li>
-              <li>Many Databases<br></li>
-            </ul>
-          </div>
-          <div class="p-4 col-lg-4">
-            <h4>No Job Too Big Or Small</h4>
-            <p>Our Experienced Programmers Will Get The Job Done. Given Enough Time.</p>
-          </div>
+        <div class="mx-auto col-lg-8 col-md-10">
+          <h1 class="display-3 mb-4">Webpasture Studios</h1>
+          <p class="lead mb-5">Greetings! Welcome to Webpasture Studios where we help make your dreams come true. Weather its creating a simple static website to advertise your business, writing software, something more advanced like a dynamic website or something with AI, even just support then we are here to help with a combined 20+ years experience in IT and creating software.</p> <a href="#about-us" class="btn btn-lg btn-primary mx-1">About Us</a> <a class="btn btn-lg mx-1 btn-primary" href="#contact-us">Contact Us<br></a>
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </a>
+  </div>
+  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="" id="about-us">
+    <div class="container py-5">
+      <div class="row">
+        <div class="mx-auto col-lg-8 col-md-10">
+          <h1 class="display-3 mb-4">About Us</h1>
+          <p class="lead mb-5">Webpasture Studios has a combined 20+ years experience in IT. We are a partnership on a venture and we are always learning, with a passion for our work.<br><br>We started out with a great interest and joy for all things technology related, from hardware to software both old and new and this is one of the things that drives us while also getting better at what we do, to keep learning and keep creating, gaining more experience along the way.<br><br>Then we created Webpasture Studios, so that we can offer our experience and skills to businesses, startups and individuals who need solutions for their projects. Our current objective is simple, help create solutions for others so they can see their dreams become reality. We are not miracle workrs but we are confident we can help create software solutions for your business, startup or personal needs.<br><br>In the future we would like to look back at our work and be happy and satisfied that we helped create the right solution for your business and we know that means we have to do our best by providing a qualtiy solution, at an appropriate price and delivering that solution on or ahead of time.<br></p> <a href="#contact-us" class="btn btn-lg btn-primary mx-1">Get In Touch!</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="" id="contact-us">
+    <div class="container py-5">
+      <div class="row">
+        <div class="mx-auto col-lg-8 col-md-10">
+          <h1 class="display-3 mb-4">Contact Us</h1>
+          <p class="lead mb-5">Let's get started! Webpasture Studios is ready and waiting to start creating for you.<br>We are here for you to help create solutions for your business so please feel free to get in touch.</p><a href="#" class="btn btn-lg btn-primary mx-1">Email Us</a>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-circle fa-3x mb-2 text-muted"></i>
+          <h4> <b>Lead Developer</b></h4>
+          <p>Our lead developer is available 24/7 for sales and ongoing project support to aid and assist you in finding the right solution for your business.</p><a class="btn btn-primary" href="#" style="">Call Our Lead Developer</a>
+        </div>
+        <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-circle-o fa-3x mb-2 text-muted"></i>
+          <h4> <b>Senior Developer</b></h4>
+          <p>As with our lead developer, our senior developer is also ready and waiting to help with anything you need relating to finding the right solution for your business.</p><a class="btn btn-primary" href="#">Call Our Senior Developer<br></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
