shown phone numbers

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-circle fa-3x mb-2 text-muted"></i>
           <h4> <b>Lead Developer</b></h4>
-          <p>Our lead developer is available 24/7 for sales and ongoing project support to aid and assist you in finding the right solution for your business.</p><a class="btn btn-primary" href="tel:+447508722760" style="">Call Our Lead Developer</a>
+          <p>Our lead developer is available 24/7 for sales and ongoing project support to aid and assist you in finding the right solution for your business.<br>Call Now On +44 7415 459896</p><a class="btn btn-primary" href="tel:+447415459896" style="">Call Our Lead Developer</a>
         </div>
         <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-circle-o fa-3x mb-2 text-muted"></i>
           <h4> <b>Senior Developer</b></h4>
-          <p>As with our lead developer, our senior developer is also ready and waiting to help with anything you need relating to finding the right solution for your business.</p><a class="btn btn-primary" href="tel:+447415459896">Call Our Senior Developer<br></a>
+          <p>As with our lead developer, our senior developer is also ready and waiting to help with anything you need relating to finding the right solution for your business.<br>Call Now On +44 7508 722760</p><a class="btn btn-primary" href="tel:+447508722760">Call Our Senior Developer<br></a>
         </div>
       </div>
     </div>
