--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
           <h1 class="display-3 mb-4">Webpasture Studios</h1>
-          <p class="lead mb-5">Greetings! Welcome to Webpasture Studios where we help make your dreams come true. Weather its creating a simple static website to advertise your business, writing software, something more advanced like a dynamic website or something with AI, even just support then we are here to help with a combined 20+ years experience in IT and creating software.</p> <a href="#about-us" class="btn btn-lg btn-primary mx-1">About Us</a> <a class="btn btn-lg mx-1 btn-primary" href="#contact-us">Contact Us<br></a>
+          <p class="lead mb-5">Greetings! Welcome to Webpasture Studios™ where we help make your dreams come true. Weather its creating a simple static website to advertise your business, writing software, something more advanced like a dynamic website or something with AI, even just support then we are here to help with a combined 20+ years experience in IT and creating software.</p> <a href="#about-us" class="btn btn-lg btn-primary mx-1">About Us</a> <a class="btn btn-lg mx-1 btn-primary" href="#contact-us">Contact Us<br></a>
         </div>
       </div>
     </div>
