--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container py-5">
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
-          <h1 class="display-3 mb-4">Webpasture Studios</h1>
-          <p class="lead mb-5">Greetings! Welcome to Webpasture Studios™ where we help make your dreams come true. Weather its creating a simple static website to advertise your business, writing software, something more advanced like a dynamic website or something with AI, even just support then we are here to help with a combined 20+ years experience in IT and creating software.</p> <a href="#about-us" class="btn btn-lg btn-primary mx-1">About Us</a> <a class="btn btn-lg mx-1 btn-primary" href="#contact-us">Contact Us<br></a>
+          <h1 class="display-3 mb-4">Webpasture Studios™</h1>
+          <p class="lead mb-5" style="">Greetings! Welcome to Webpasture Studios™ where we help make your dreams come true. Weather its creating a simple static website to advertise your business, writing software, something more advanced like a dynamic website or something with AI, even just support then we are here to help with a combined 20+ years experience in IT and creating software.</p> <a href="#about-us" class="btn btn-lg btn-primary mx-1">About Us</a> <a class="btn btn-lg mx-1 btn-primary" href="#contact-us">Contact Us<br></a>
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
           <h1 class="display-3 mb-4">About Us</h1>
-          <p class="lead mb-5">Webpasture Studios has a combined 20+ years experience in IT. We are a partnership on a venture and we are always learning, with a passion for our work.<br><br>We started out with a great interest and joy for all things technology related, from hardware to software both old and new and this is one of the things that drives us while also getting better at what we do, to keep learning and keep creating, gaining more experience along the way.<br><br>Then we created Webpasture Studios, so that we can offer our experience and skills to businesses, startups and individuals who need solutions for their projects. Our current objective is simple, help create solutions for others so they can see their dreams become reality. We are not miracle workrs but we are confident we can help create software solutions for your business, startup or personal needs.<br><br>In the future we would like to look back at our work and be happy and satisfied that we helped create the right solution for your business and we know that means we have to do our best by providing a qualtiy solution, at an appropriate price and delivering that solution on or ahead of time.<br></p> <a href="#contact-us" class="btn btn-lg btn-primary mx-1">Get In Touch!</a>
+          <p class="lead mb-5">Webpasture Studios™ has a combined 20+ years experience in IT. We are a partnership on a venture and we are always learning, with a passion for our work.<br><br>We started out with a great interest and joy for all things technology related, from hardware to software both old and new and this is one of the things that drives us while also getting better at what we do, to keep learning and keep creating, gaining more experience along the way.<br><br>Then we created Webpasture Studios™, so that we can offer our experience and skills to businesses, startups and individuals who need solutions for their projects. Our current objective is simple, help create solutions for others so they can see their dreams become reality. We are not miracle workrs but we are confident we can help create software solutions for your business, startup or personal needs.<br><br>In the future we would like to look back at our work and be happy and satisfied that we helped create the right solution for your business and we know that means we have to do our best by providing a qualtiy solution, at an appropriate price and delivering that solution on or ahead of time.<br></p> <a href="#contact-us" class="btn btn-lg btn-primary mx-1">Get In Touch!</a>
         </div>
       </div>
     </div>
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
           <h1 class="display-3 mb-4">Contact Us</h1>
-          <p class="lead mb-5">Let's get started! Webpasture Studios is ready and waiting to start creating for you.<br>We are here for you to help create solutions for your business so please feel free to get in touch.</p><a href="mailto:webpasturestudios@gmail.com" class="btn btn-lg btn-primary mx-1">Email Us</a>
+          <p class="lead mb-5">Let's get started! Webpasture Studios™ is ready and waiting to start creating for you.<br>We are here for you to help create solutions for your business so please feel free to get in touch @&nbsp;webpasturestudios@gmail.com</p><a href="mailto:webpasturestudios@gmail.com" class="btn btn-lg btn-primary mx-1">Email Us</a>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -53,6 +53,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
