update contact us

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
           <h1 class="display-3 mb-4">Contact Us</h1>
-          <p class="lead mb-5">Let's get started! Webpasture Studios™ is ready and waiting to start creating for you.<br>We are here for you to help create solutions for your business so please feel free to get in touch @&nbsp;webpasturestudios@gmail.com</p><a href="mailto:webpasturestudios@gmail.com" class="btn btn-lg btn-primary mx-1">Email Us</a>
+          <p class="lead mb-5">Let's get started! Webpasture Studios™ is ready and waiting to start creating for you, from a new website to anything you can imagine.<br>We are here for you to help create solutions for your business so please feel free to get in touch @&nbsp;webpasturestudios@gmail.com</p><a href="mailto:webpasturestudios@gmail.com" class="btn btn-lg btn-primary mx-1">Email Us</a>
         </div>
       </div>
       <div class="row justify-content-center">
