--- a/index.html
+++ b/index.html
@@ -10,50 +10,249 @@
 </head>
 
 <body style="	background-image: linear-gradient(to bottom, hex(#333333), hex(2FFD31));	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="bg-dark">
-  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="	background-image: linear-gradient(to bottom, rgba(51,51,51,1), rgba(0,0,0,0.8));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-    <div class="container py-5">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <div class="container-fluid"> <a class="navbar-brand" href="#">
+        <i class="fa d-inline fa-lg fa-stop-circle"></i>
+        <b> WebPastureStudios™</b>
+      </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar10">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar10">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"> <a class="nav-link" href="#websites">Websites</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#software">Software</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#services">Services</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#about">About</a> </li>
+        </ul> <a class="btn navbar-btn ml-md-2 text-dark btn-primary" href="#contact">Contact us</a>
+      </div>
+    </div>
+  </nav>
+  <div class="py-5 h-100 w-100" style="	background-image: linear-gradient(to bottom, rgba(31, 31, 31, 2), rgba(0,0,0,0.8));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+    <div class="container">
       <div class="row">
-        <div class="mx-auto col-lg-8 col-md-10">
-          <h1 class="display-3 mb-4">Webpasture Studios™</h1>
-          <p class="lead mb-5" style="">Greetings! Welcome to Webpasture Studios™ where we help make your dreams come true. Weather its creating a simple static website to advertise your business, writing software, something more advanced like a dynamic website or something with AI, even just support then we are here to help with a combined 20+ years experience in IT and creating software.</p> <a href="#about-us" class="btn btn-lg btn-primary mx-1">About Us</a> <a class="btn btn-lg mx-1 btn-primary" href="#contact-us">Contact Us<br></a>
+        <div class="text-center mx-auto col-10 col-lg-12">
+          <h1 class="display-3 mb-4 text-light">Webpasture Studios™</h1>
+          <div id="carousel1" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img class="d-block h-50 w-100" src="slide_0.png" style=""> </div>
+              <div class="carousel-item"> <img class="d-block w-100" src="slide_1.png"> </div>
+              <div class="carousel-item"> <img class="d-block w-100" src="slide_2.png"> </div>
+            </div>
+            <ol class="carousel-indicators">
+              <li data-target="#carousel1" data-slide-to="0" class="active"> </li>
+              <li data-target="#carousel1" data-slide-to="1"> </li>
+              <li data-target="#carousel1" data-slide-to="2"> </li>
+            </ol>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="" id="about-us">
+  <div class="pt-5" id="websites">
+    <div class="container">
+      <div class="row">
+        <div class="text-center mx-auto col-md-12">
+          <h1 class="text-light">Websites</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4 border border-dark" style="">
+              <h3 contenteditable="true">Get A New Website In About 3 Days</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£199.99</h2>
+              <p>★ (Recommended)&nbsp;★</p>
+              <ul class="text-left">
+                <li>A Great New Website.</li>
+                <li>Static.</li>
+                <li style="">Delivery In 1-3 Days (estimated).</li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4">
+              <h3>Get A More Advanced Website</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£499.99</h2>
+              <p>(Recommended if Required)</p>
+              <ul class="text-left">
+                <li>A New Advanced Website.</li>
+                <li>Static / Dynamic.</li>
+                <li>Delivered In 3-30 Days (estimated).<br><br></li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4">
+              <h3>Update / Upgrade Existing Website</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£499.99</h2>
+              <p>(Recommended if Required)</p>
+              <ul class="text-left">
+                <li>Get Your Websit Updated According To Your Specifications.<br></li>
+                <li>Delivered 3-30 Days (estimated).&nbsp;<br><br></li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pt-5" id="software">
+    <div class="container">
+      <div class="row">
+        <div class="text-center mx-auto col-md-12">
+          <h1 class="text-light">Software</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4">
+              <h3>Get A New Simple Tool In 3 Days</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£199.99</h2>
+              <p>(Recommended)</p>
+              <ul class="text-left">
+                <li>New Custom Tool.</li>
+                <li>CLI</li>
+                <li>Delivery in 1-3 Days (estimated).</li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4">
+              <h3>Get More Advanced Tool / Application</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£999.99&nbsp;</h2>
+              <p>(Recommended if Required)</p>
+              <ul class="text-left">
+                <li>New Advanced Tool.</li>
+                <li>CLI / GUI.</li>
+                <li>Delivery in 3-30 Days (estimated).<br><br></li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4">
+              <h3>Update / Upgrade Existing Tool / App</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£999.99</h2>
+              <p>(Recommended if Required)</p>
+              <ul class="text-left">
+                <li>Updated&nbsp;Software According To Your Specifications.</li>
+                <li>CLI / GUI.</li>
+                <li>Delivery in 3-30 Days (estimated).<br><br></li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pt-5" id="services">
+    <div class="container">
+      <div class="row">
+        <div class="text-center mx-auto col-md-12">
+          <h1 class="text-light">Services</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4">
+              <h3>Professional</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£99.99 / Month</h2>
+              <p>Professional (Recommended for 1 or more updates/upgrades a month)</p>
+              <ul class="text-left">
+                <li>Save 15% on every Update / Upgrade.<br></li>
+                <li>24/7 Support.</li>
+                <li>12 months contract (£1,199.88 annually in monthly installments of £99.99 or save £199.88 by making one upfront payment of just £1,000 ).</li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Purchase Subscription</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4">
+              <h3 class="text-light">Professional+</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£499.99 / Month</h2>
+              <p>Professional+ (recommended for 1 or more updates/upgrdes a month)<br></p>
+              <ul class="text-left">
+                <li>Includes FREE updates per month woth less than or equal to subscription fee.</li>
+                <li>Save 20% on all Updates / Upgrades.</li>
+                <li>24/7 Support.<br></li>
+                <li>12 months contract (£5,999.88 annually in monthly installments of £499.99 or save £999.88 by making one upfront payment of £5,000). </li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Purchase Subscription</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div class="card bg-dark text-center text-light">
+            <div class="card-body p-4" style="">
+              <h3 class="text-warning">Enterprise</h3>
+              <h2 class="my-3"> <b>From&nbsp;</b>£999.99 / Month</h2>
+              <p>Enterprise (recommended for regular updates/upgrades)</p>
+              <ul class="text-left">
+                <li>Includes FREE updates per month woth less than or equal to subscription fee.</li>
+                <li>Save 25% on all following Updates / Upgrades.</li>
+                <li>24/7 Support.</li>
+                <li>12 months contract (£11,999.88 annually in monthly installments of £999.99 or save £1,999.88 by making one upfront payment of £10,000).&nbsp;</li>
+              </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Purchase Subscription</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-light">* Please note that all products and services are hand crafted by a limited supply of artizans and are therefore subject to availablitity. We are a partnership and may only be able to handle so much demand at any one time. However! Please feel free to give us a call or if you prefer you may contact us about any of our products, services or to make a query via email and we here at Webpasture Studios™ will be happy to get back in touch with you as soon as possible. Thanks!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center text-white h-100 align-items-center d-flex mt-5 pb-5 pt-5" id="about" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)); background-position: left top; background-size: 100%; background-repeat: repeat;">
     <div class="container py-5">
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
           <h1 class="display-3 mb-4">About Us</h1>
-          <p class="lead mb-5">Webpasture Studios™ has a combined 20+ years experience in IT. We are a partnership on a venture and we are always learning, with a passion for our work.<br><br>We started out with a great interest and joy for all things technology related, from hardware to software both old and new and this is one of the things that drives us while also getting better at what we do, to keep learning and keep creating, gaining more experience along the way.<br><br>Then we created Webpasture Studios™, so that we can offer our experience and skills to businesses, startups and individuals who need solutions for their projects. Our current objective is simple, help create solutions for others so they can see their dreams become reality. We are not miracle workrs but we are confident we can help create software solutions for your business, startup or personal needs.<br><br>In the future we would like to look back at our work and be happy and satisfied that we helped create the right solution for your business and we know that means we have to do our best by providing a qualtiy solution, at an appropriate price and delivering that solution on or ahead of time.<br></p> <a href="#contact-us" class="btn btn-lg btn-primary mx-1">Get In Touch!</a>
+          <p class="lead mb-4">Webpasture Studios™ has a combined 20+ years’ experience in IT. We are a partnership on a venture and we are always learning, with a passion for our work.<br><br>&nbsp; We started out with a great interest and joy for all things technology related, from hardware to software and even old type writers! We keep getting better at what we do, we kept learning and always creating something new while gaining more experience along the way.<br><br>THEN we created Webpasture Studios™ as a partnership, so that we can offer our skills and experience to businesses, startups and individuals who need solutions for their projects. Our current objective is simple, help create solutions for others so they can see their dreams become reality, advertise their business or even just make life easier. We are not miracle workers but we are confident we can help create solutions for your business, startup or personal needs.<br><br>We know finding the right solution for your business is important and we know that means we have to do our best by providing quality solutions, at an appropriate price and delivering that solution on or ahead of time.</p> <a href="#contact-us" class="btn btn-lg btn-primary mx-1 text-dark">Get In Touch!</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="" id="contact-us">
+  <div class="text-center text-white align-items-center d-flex h-100 pb-4" style="	background-image: linear-gradient(to bottom, rgba(18, 18, 18, 0.6), rgba(0, 0, 0, 1.0));	background-position: top left;	background-size: 100%;	background-repeat: repeat;" id="contact">
     <div class="container py-5">
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
           <h1 class="display-3 mb-4">Contact Us</h1>
-          <p class="lead mb-5">Let's get started! Webpasture Studios™ is ready and waiting to start creating for you, from a new website to anything you can imagine.<br>We are here for you to help create solutions for your business so please feel free to get in touch @&nbsp;webpasturestudios@gmail.com</p><a href="mailto:webpasturestudios@gmail.com" class="btn btn-lg btn-primary mx-1">Email Us</a>
+          <p class="lead">Let's get started! Webpasture Studios™ is ready and waiting to start creating for you, from a new website to anything you can imagine.<br>We are here for you to help create solutions for your business so please feel free to get in touch via e-mail: webpasturestudios@gmail.com</p>
+          <div class="row">
+            <div class="col-md-12"><i class="d-block fa fa-envelope-o -o text-muted mb-2 fa-5x"></i></div>
+          </div><a href="mailto:webpasturestudios@gmail.com" class="btn btn-lg btn-primary fa-envelope-omx-1 text-dark mb-2">Email</a>
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-circle fa-3x mb-2 text-muted"></i>
+        <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-user-circle fa-5x mb-2 text-muted"></i>
           <h4> <b>Lead Developer</b></h4>
-          <p>Our lead developer is available 24/7 for sales and ongoing project support to aid and assist you in finding the right solution for your business.<br>Call Now On (+44) 7415 459896</p><a class="btn btn-primary" href="tel:+447415459896" style="">Call Our Lead Developer</a>
+          <p>Our lead developer is available 24/7 for sales and ongoing project support to aid and assist you in finding the right solution for your business.<br>Call now on (+44) 7415 459896</p><a class="btn btn-primary text-dark" href="tel:+447415459896" style="">Call Our Lead Developer</a>
         </div>
-        <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-circle-o fa-3x mb-2 text-muted"></i>
+        <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-user-circle-o -o fa-5x mb-2 text-muted"></i>
           <h4> <b>Senior Developer</b></h4>
-          <p>As with our lead developer, our senior developer is also ready and waiting to help with anything you need relating to finding the right solution for your business.<br>Call Now On (+44) 7508 722760</p><a class="btn btn-primary" href="tel:+447508722760">Call Our Senior Developer<br></a>
+          <p>As with our lead developer, our senior developer is also ready and waiting to help with anything you need relating to finding the right solution for your business.<br>Call now on (+44) 7508 722760</p><a class="btn btn-primary text-dark" href="tel:+447508722760">Call Our Senior Developer<br></a>
         </div>
       </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
 </body>
 
 </html>
