--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="py-5 h-100 w-100" style="	background-image: linear-gradient(to bottom, rgba(31, 31, 31, 2), rgba(0,0,0,0.8));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
-        <div class="text-center mx-auto col-10 col-lg-12">
+        <div class="text-center mx-auto col-10 col-lg-12" style="">
           <h1 class="display-3 mb-4 text-light">Webpasture Studios™</h1>
           <div id="carousel1" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
             <div class="carousel-inner">
@@ -117,7 +117,7 @@
               <ul class="text-left">
                 <li>New Custom Tool.</li>
                 <li>CLI</li>
-                <li>Delivery in 1-3 Days (estimated).</li>
+                <li>Delivery in 1-30 Days+(estimated).</li>
               </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
             </div>
           </div>
@@ -131,7 +131,7 @@
               <ul class="text-left">
                 <li>New Advanced Tool.</li>
                 <li>CLI / GUI.</li>
-                <li>Delivery in 3-30 Days (estimated).<br><br></li>
+                <li>Delivery in 1-6 months+(estimated).<br><br></li>
               </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
             </div>
           </div>
@@ -145,7 +145,7 @@
               <ul class="text-left">
                 <li>Updated&nbsp;Software According To Your Specifications.</li>
                 <li>CLI / GUI.</li>
-                <li>Delivery in 3-30 Days (estimated).<br><br></li>
+                <li>Delivery in 3 Days to several months+ (estimated).<br><br></li>
               </ul> <a class="btn btn-primary mt-3 text-dark" href="#contact">Buy Now</a>
             </div>
           </div>
