update: slide splashscreen

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 h-100 w-100" style="	background-image: linear-gradient(to bottom, rgba(31, 31, 31, 2), rgba(0,0,0,0.8));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="py-5 h-100 w-100" style="	background-image: linear-gradient(to bottom, rgba(31, 31, 31, 2), rgba(0,0,0,0.8));	background-position: top left;	background-size: 100%;	background-repeat: repeat;" id="home">
     <div class="container">
       <div class="row">
         <div class="text-center mx-auto col-10 col-lg-12" style="">
@@ -232,7 +232,7 @@
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
           <h1 class="display-3 mb-4">Contact Us</h1>
-          <p class="lead">Let's get started! Webpasture Studios™ is ready and waiting to start creating for you, from a new website to anything you can imagine.<br>We are here for you to help create solutions for your business so please feel free to get in touch via e-mail: webpasturestudios@gmail.com</p>
+          <p class="lead" style="">Let's get started! Webpasture Studios™ is ready and waiting to start creating for you, from a new website to anything you can imagine.<br>We are here for you to help create solutions for your business so please feel free to get in touch via e-mail: webpasturestudios@gmail.com</p>
           <div class="row">
             <div class="col-md-12"><i class="d-block fa fa-envelope-o -o text-muted mb-2 fa-5x"></i></div>
           </div><a href="mailto:webpasturestudios@gmail.com" class="btn btn-lg btn-primary fa-envelope-omx-1 text-dark mb-2">Email</a>
@@ -246,6 +246,43 @@
         <div class="col-lg-5 col-md-6 p-4"> <i class="d-block fa fa-user-circle-o -o fa-5x mb-2 text-muted"></i>
           <h4> <b>Senior Developer</b></h4>
           <p>As with our lead developer, our senior developer is also ready and waiting to help with anything you need relating to finding the right solution for your business.<br>Call now on (+44) 7508 722760</p><a class="btn btn-primary text-dark" href="tel:+447508722760">Call Our Senior Developer<br></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-6 p-3">
+          <h5> <b>Main</b> </h5>
+          <ul class="list-unstyled">
+            <li class="text-muted"> <a href="#home" class="text-muted">Home</a> </li>
+            <li> <a href="#websites" class="text-muted">Websites</a> </li>
+            <li> <a href="#software" class="text-muted">Software</a> </li>
+            <li> <a href="#services" class="text-muted">Services</a> </li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-6 p-3">
+          <h5> <b>About</b></h5>
+          <ul class="list-unstyled">
+            <li> <a href="#about" class="text-muted">About</a> </li>
+            <li> <a href="#contact" class="text-muted">Contact</a> </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-4 p-3">
+          <h5> <b>Follow us</b> </h5>
+          <div class="row">
+            <div class="col-md-12 d-flex align-items-center my-2 justify-content-center"> <a href="https://www.linkedin.com/company/webpasture-studios/about">
+                <i class="d-block fa fa-linkedin text-muted fa-lg mx-2"></i>
+              </a> <a href="https://twitter.com/WebPStudios">
+                <i class="d-block fa fa-twitter fa-lg ml-2 text-muted"></i>
+              </a> </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p class="mb-0 mt-2">Webpasture Studios™<br></p>
         </div>
       </div>
     </div>
