--- a/index.html
+++ b/index.html
@@ -272,7 +272,11 @@
         <div class="col-lg-3 col-md-4 p-3">
           <h5> <b>Follow us</b> </h5>
           <div class="row">
-            <div class="col-md-12 d-flex align-items-center my-2 justify-content-center"> <a href="https://www.linkedin.com/company/webpasture-studios/about">
+            <div class="col-md-12 d-flex align-items-center my-2 justify-content-center"> <a href="https://github.com/holographicSol/">
+                <i class="d-block fa fa-github text-muted fa-lg mx-2"></i>
+              </a><a href="https://github.com/adisciple50">
+                <i class="d-block fa fa-github-alt text-muted fa-lg mx-2"></i>
+              </a><a href="https://www.linkedin.com/company/webpasture-studios/about">
                 <i class="d-block fa fa-linkedin text-muted fa-lg mx-2"></i>
               </a> <a href="https://twitter.com/WebPStudios">
                 <i class="d-block fa fa-twitter fa-lg ml-2 text-muted"></i>
