update: slide splashscreen

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="col-lg-3 col-md-4 p-3">
           <h5> <b>Follow us</b> </h5>
           <div class="row">
-            <div class="col-md-12 d-flex align-items-center my-2 justify-content-center"> <a href="https://github.com/holographicSol/">
+            <div class="col-md-12 d-flex my-2 align-items-start justify-content-start"> <a href="https://github.com/holographicSol/">
                 <i class="d-block fa fa-github text-muted fa-lg mx-2"></i>
               </a><a href="https://github.com/adisciple50">
                 <i class="d-block fa fa-github-alt text-muted fa-lg mx-2"></i>
