update: slide splashscreen

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-6 p-3">
-          <h5> <b>Main</b> </h5>
+          <h5> <b>Navigation</b></h5>
           <ul class="list-unstyled">
             <li class="text-muted"> <a href="#home" class="text-muted">Home</a> </li>
             <li> <a href="#websites" class="text-muted">Websites</a> </li>
@@ -263,7 +263,7 @@
           </ul>
         </div>
         <div class="col-lg-4 col-6 p-3">
-          <h5> <b>About</b></h5>
+          <h5> <b>About Us</b></h5>
           <ul class="list-unstyled">
             <li> <a href="#about" class="text-muted">About</a> </li>
             <li> <a href="#contact" class="text-muted">Contact</a> </li>
