update: slide splashscreen

--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
                 <i class="d-block fa fa-linkedin text-muted fa-lg mx-2"></i>
               </a> <a href="https://twitter.com/WebPStudios">
                 <i class="d-block fa fa-twitter fa-lg ml-2 text-muted"></i>
+              </a><a href="https://www.facebook.com/webpasturestudios">
+                <i class="d-block fa fa-facebook fa-lg ml-2 text-muted"></i>
               </a> </div>
           </div>
         </div>
