update: slide splashscreen

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid"> <a class="navbar-brand" href="#">
         <i class="fa d-inline fa-lg fa-stop-circle"></i>
         <b> Webpasture Studios™</b>
-      </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar10">
+      </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar10" style="">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar10">
@@ -272,8 +272,10 @@
         <div class="col-lg-3 col-md-4 p-3">
           <h5> <b>Follow us @</b></h5>
           <div class="row">
-            <div class="col-md-12 d-flex my-2 align-items-start justify-content-start"> <a href="https://github.com/holographicSol/">
+            <div class="col-md-12 d-flex my-2 align-items-start justify-content-start"> <a href="https://github.com/orgs/webpasture-studios">
                 <i class="d-block fa fa-github text-muted fa-lg mx-2"></i>
+              </a><a href="https://github.com/holographicSol/">
+                <i class="d-block fa fa-github-alt text-muted fa-lg mx-2"></i>
               </a><a href="https://github.com/adisciple50">
                 <i class="d-block fa fa-github-alt text-muted fa-lg mx-2"></i>
               </a><a href="https://www.linkedin.com/company/webpasture-studios/about">
