update: slide splashscreen

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
-          <p class="mb-0 mt-2">Webpasture Studios™<br></p>
+          <p class="mb-0 mt-2">© Copyright 2023 Webpasture Studios™</p>
         </div>
       </div>
     </div>
