update: slide splashscreen

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="col-lg-4 p-3">
           <div class="card bg-dark text-center text-light">
             <div class="card-body p-4">
-              <h3>Get A New Simple Tool In 3 Days</h3>
+              <h3>Get A New Simple Tool EXPRESS</h3>
               <h2 class="my-3"> <b>From&nbsp;</b>£199.99</h2>
               <p>(Recommended)</p>
               <ul class="text-left">
