update: index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="	background-image: linear-gradient(to bottom, hex(#333333), hex(2FFD31));	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="bg-dark">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid"> <a class="navbar-brand" href="#">
-        <i class="fa d-inline fa-lg fa-stop-circle"></i>
+        <i class="fa d-inline fa-lg fa-stop-circle" style=""></i>
         <b> Webpasture Studios™</b>
       </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar10" style="">
         <span class="navbar-toggler-icon"></span>
@@ -111,7 +111,7 @@
         <div class="col-lg-4 p-3">
           <div class="card bg-dark text-center text-light">
             <div class="card-body p-4">
-              <h3>Get A New Simple Tool EXPRESS</h3>
+              <h3 contenteditable="true">Get A New Simple Tool EXPRESS</h3>
               <h2 class="my-3"> <b>From&nbsp;</b>£199.99</h2>
               <p>(Recommended)</p>
               <ul class="text-left">
